--- a/Admin/STT5811S26Syllabus.html
+++ b/Admin/STT5811S26Syllabus.html
@@ -287,43 +287,7 @@ if (window.hljs) {
 
 
 
-<style type="text/css">.rmdexercise {
-padding: 1em 1em 1em 4em;
-margin-bottom: 10px;
-background: rgba(49, 199, 58, 0.1) 5px;
-border-radius: 10px;
-border: 3px solid green;
-} .rmdoptional {
-padding: 1em 1em 1em 4em;
-margin-bottom: 10px;
-background: lightyellow 5px;
-border-radius: 10px;
-border: 3px solid black;
-} .rmdremind, .rmdcaution, .rmdimportant, .rmdnote, .rmdtip, .rmdwarning {
-padding: 1em 1em 1em 4em;
-margin-bottom: 10px;
-background: #f5f5f5 5px center/3em no-repeat;
-border-radius: 10px;
-border: 3px solid black;
-} .rmdcaution {
-background-image: url("../images/caution.png");
-}
-.rmdimportant {
-background-image: url("../images/important.png");
-}
-.rmdnote {
-background-image: url("../images/note.png");
-}
-.rmdtip {
-background-image: url("../images/tip.png");
-}
-.rmdwarning {
-background-image: url("../images/warning.png");
-}
-.rmdremind {
-background-image: url("../images/reminder.jpg");
-}
-.kable_wrapper {
+<style type="text/css">.kable_wrapper {
 border-spacing: 20px 0;
 border-collapse: separate;
 border: none;
@@ -464,7 +428,7 @@ display: none;
 <h1 class="title toc-ignore">STT 5811 Statistical Concepts &amp;
 Applications I (Spring 2026)</h1>
 <h3 class="subtitle">Instructor: Dr. Jill E. Thomley</h3>
-<h4 class="date">Last updated Sun, Jan 04, 2026 @ 03:43 PM</h4>
+<h4 class="date">Last updated Sun, Jan 04, 2026 @ 03:48 PM</h4>
 
 </div>
 
