--- a/Admin/STT5811S26Syllabus.html
+++ b/Admin/STT5811S26Syllabus.html
@@ -428,7 +428,7 @@ display: none;
 <h1 class="title toc-ignore">STT 5811 Statistical Concepts &amp;
 Applications I (Spring 2026)</h1>
 <h3 class="subtitle">Instructor: Dr. Jill E. Thomley</h3>
-<h4 class="date">Last updated Sun, Jan 04, 2026 @ 03:48 PM</h4>
+<h4 class="date">Last updated Fri, Jan 09, 2026 @ 04:05 PM</h4>
 
 </div>
 
@@ -627,23 +627,35 @@ students.</p>
 <h3><strong>Assessment &amp; Grading</strong></h3>
 <div id="textbook-technology" class="section level4">
 <h4><strong>Textbook &amp; Technology</strong></h4>
-<p>Our electronic textbook is <strong><em>Introduction to Statistical
-Investigations (2nd Ed.)</em></strong> by Nathan Tintle, Beth Chance,
-George Cobb, Allan Rossman, Soma Roy, Todd Swanson, and Jill
-VanderStoep. All course materials will be found on <a href="https://asulearn.appstate.edu/"><strong>AsULearn</strong></a> or
-<a href="https://www.wileyplus.com/"><strong>WileyPLUS</strong></a>
-(which is included in your rental fee). More specific information about
-individual assignments will be provided on AsULearn.</p>
+<p>Our primary electronic textbook is <strong><em>Introduction to Modern
+Statistics, 2nd Edition</em></strong> by Mine Çetinkaya-Rundel and
+Johanna Hardin. You can download a pdf if you want an offline version,
+and bound copies can be purchased for $25. Our supplemental electronic
+textbook is <strong><em>Statistical Inference via Data Science: A
+ModernDive into R and the Tidyverse, 2nd Edition</em></strong> by
+Chester Ismay, Albert Y. Kim, and Arturo Valdivi. All course materials
+will be found on or linked from <a href="https://asulearn.appstate.edu/"><strong>AsULearn</strong></a>.
+More specific information about individual assignments will be provided
+on AsULearn.</p>
 <p>All face-to-face classes will be held in a computer lab. To
 participate in learning activities and to complete assignments outside
 of class, you need access to an electronic device on which you can
-access Zoom, WileyPLUS, web-based simulation applets, and other digital
-materials. Outside of class, the applets can be used on a cell phone,
-tablet, or computer. There is no need for cell phones in face-to-face
-classes, other than for logging into lab computers using Appalachian’s
-dual authentication protocol.</p>
+access Zoom, web-based simulation applets, R and RStudio, our digital
+textbooks, videos, or other digital materials. There is no need for cell
+phones in face-to-face classes, other than for logging into lab
+computers using Appalachian’s dual authentication protocol.</p>
 <p>Written work typically will be completed using R Markdown, including
-R programming and LaTeX code as needed.</p>
+R programming and LaTeX code as needed. We will use our Appalachian
+RStudio server in class. You are welcome to download R and RStudio to
+your own computer to use offline.</p>
+<p><strong>Links (also provided on AsULearn):</strong></p>
+<ul>
+<li>Introduction to Modern Statistics, 2nd Edition (IMS2E): <a href="https://openintro-ims.netlify.app/" class="uri">https://openintro-ims.netlify.app/</a></li>
+<li>A Modern Dive into R and the Tidyverse, 2nd Edition (MD2E): <a href="https://moderndive.com/v2/" class="uri">https://moderndive.com/v2/</a></li>
+<li>RStudio Server (use your Appalachian credentials): <a href="https://mathr.appstate.edu/" class="uri">https://mathr.appstate.edu/</a></li>
+<li>The R Project for Statistical Computing: <a href="https://www.r-project.org/" class="uri">https://www.r-project.org/</a></li>
+<li>Posit—Download RStudio IDE: <a href="https://posit.co/downloads/" class="uri">https://posit.co/downloads/</a></li>
+</ul>
 </div>
 <div id="course-assessments" class="section level4">
 <h4><strong>Course Assessments</strong></h4>
