Tweak goals/fix typos

--- a/Admin/STT5811S26Syllabus.html
+++ b/Admin/STT5811S26Syllabus.html
@@ -428,7 +428,7 @@ display: none;
 <h1 class="title toc-ignore">STT 5811 Statistical Concepts &amp;
 Applications I (Spring 2026)</h1>
 <h3 class="subtitle">Instructor: Dr. Jill E. Thomley</h3>
-<h4 class="date">Last updated Fri, Jan 09, 2026 @ 05:08 PM</h4>
+<h4 class="date">Last updated Fri, Jan 09, 2026 @ 05:37 PM</h4>
 
 </div>
 
@@ -534,21 +534,23 @@ key course topics. Prerequisite: STT 5810</p>
 <p><mark><strong>Students will be able to:</strong></mark></p>
 <ul>
 <li><p>use and discuss selected methods for exploring, describing, and
-comparing data;</p></li>
+comparing data.</p></li>
 <li><p>use and discuss selected methods for making inferences and
-estimations from data;</p></li>
+estimations from data.</p></li>
 <li><p>use and discuss selected methods for modeling categorical and
-quantitative relationships;</p></li>
+quantitative relationships.</p></li>
 <li><p>compare, connect, and assess simulation-based and theory-based
-methods of investigation;</p></li>
+methods of investigation.</p></li>
 <li><p>discuss the roles and impact of randomness in statistical
-processes, sampling, and study design;</p></li>
+processes, sampling, and study design.</p></li>
 <li><p>apply and discuss axiomatic probability, probability
-distributions, and sampling distributions;</p></li>
+distributions, and sampling distributions.</p></li>
 <li><p>communicate concepts and results using statistical frameworks,
-vocabulary, and symbols;</p></li>
+vocabulary, and symbols.</p></li>
 <li><p>use statistical thinking to evaluate scholarly research and
-selected media content; and</p></li>
+selected media content.</p></li>
+<li><p>use a statistical programming language for simulation, analysis,
+and reporting.</p></li>
 <li><p>connect course content to professional standards and pedagogical
 practices.</p></li>
 </ul>
