--- a/Admin/STT5811S26Syllabus.html
+++ b/Admin/STT5811S26Syllabus.html
@@ -428,7 +428,7 @@ display: none;
 <h1 class="title toc-ignore">STT 5811 Statistical Concepts &amp;
 Applications I (Spring 2026)</h1>
 <h3 class="subtitle">Instructor: Dr. Jill E. Thomley</h3>
-<h4 class="date">Last updated Fri, Jan 09, 2026 @ 05:37 PM</h4>
+<h4 class="date">Last updated Sat, Jan 10, 2026 @ 12:56 PM</h4>
 
 </div>
 
@@ -496,8 +496,12 @@ Resources</strong></a> (ODR) at Appalachian.
 </div>
 <div id="instructor-contacts" class="section level3">
 <h3><strong>Instructor Contacts</strong></h3>
-<p><strong>Office:</strong> Walker Hall 228<br> <strong>Phone:</strong>
-828-262-2383<br> <strong>Email: <a href="mailto:thomleyje@appstate.edu" class="email">thomleyje@appstate.edu</a></strong><br> <strong>Page: <a href="https://jillthomley.github.io/" class="uri">https://jillthomley.github.io/</a></strong></p>
+<ul>
+<li><strong>Office:</strong> Walker Hall 228<br></li>
+<li><strong>Phone:</strong> 828-262-2383<br></li>
+<li><strong>Email: <a href="mailto:thomleyje@appstate.edu" class="email">thomleyje@appstate.edu</a></strong><br></li>
+<li><strong>Page: <a href="https://jillthomley.github.io/" class="uri">https://jillthomley.github.io/</a></strong></li>
+</ul>
 </div>
 <div id="class-meeting-times" class="section level3">
 <h3><strong>Class Meeting Times</strong></h3>
@@ -675,25 +679,25 @@ DataCamp modules are primarily formative assessments.</p></li>
 several homework assignments, roughly one per week. These are primarily
 formative assessments of your knowledge and skills, and will be graded
 on a 5-point scale that reflects accuracy and completion/effort.
-Submission might be online or paper, depending on the assignment.</p>
+Submission may be online or printed, as specified in the assignment on
+AsULearn. Note that <strong>correct</strong> also means there is no
+extraneous code, output, messages, warnings, or printouts of data.</p>
 <ul>
-<li><p><strong>5</strong> = All problems are complete (with work, steps,
-or details shown), and <span class="math inline">\(\ge\)</span> 75% are
-fully correct. Correctness also means that there is no extraneous code,
-output, messages, warnings, or printouts of data.</p></li>
-<li><p><strong>4</strong> = All problems are complete, and 50 to 75% are
-correct; <strong>OR</strong> nearly all problems are complete, and <span class="math inline">\(\ge\)</span> 75% are correct.</p></li>
-<li><p><strong>3</strong> = Nearly all problems are complete, and &lt;
-75% are fully correct.</p></li>
+<li><p><strong>5</strong> = All problems complete (includes work, steps,
+or details shown) with <span class="math inline">\(\ge\)</span> 75%
+fully correct.</p></li>
+<li><p><strong>4</strong> = All problems complete with 50% to 75%
+correct; <strong>OR</strong> nearly all problems complete with <span class="math inline">\(\ge\)</span> 75% correct.</p></li>
+<li><p><strong>3</strong> = Nearly all problems complete with &lt; 75%
+correct.</p></li>
 <li><p><strong>2</strong> = More than half but fewer than all problems
-are complete, and <span class="math inline">\(\ge\)</span> 75% are
+complete with <span class="math inline">\(\ge\)</span> 75%
 correct.</p></li>
 <li><p><strong>1</strong> = More than half but fewer than all problems
-are complete, and &lt; 75% are correct; <strong>OR</strong> fewer than
-half are complete.</p></li>
+complete with &lt; 75% correct; <strong>OR</strong> fewer than half
+complete.</p></li>
 <li><p><strong>0</strong> = No work submitted; <strong>OR</strong> fewer
-than half of problems are complete (missing work, steps, or
-details).</p>
+than half of problems complete.</p>
 <p>
 </p></li>
 </ul></li>
