Tweak HW rubric

--- a/Admin/STT5811S26Syllabus.html
+++ b/Admin/STT5811S26Syllabus.html
@@ -428,7 +428,7 @@ display: none;
 <h1 class="title toc-ignore">STT 5811 Statistical Concepts &amp;
 Applications I (Spring 2026)</h1>
 <h3 class="subtitle">Instructor: Dr. Jill E. Thomley</h3>
-<h4 class="date">Last updated Sat, Jan 10, 2026 @ 12:56 PM</h4>
+<h4 class="date">Last updated Sat, Jan 10, 2026 @ 02:46 PM</h4>
 
 </div>
 
@@ -684,20 +684,18 @@ AsULearn. Note that <strong>correct</strong> also means there is no
 extraneous code, output, messages, warnings, or printouts of data.</p>
 <ul>
 <li><p><strong>5</strong> = All problems complete (includes work, steps,
-or details shown) with <span class="math inline">\(\ge\)</span> 75%
-fully correct.</p></li>
-<li><p><strong>4</strong> = All problems complete with 50% to 75%
-correct; <strong>OR</strong> nearly all problems complete with <span class="math inline">\(\ge\)</span> 75% correct.</p></li>
-<li><p><strong>3</strong> = Nearly all problems complete with &lt; 75%
+explanations, or details shown) with <span class="math inline">\(\ge\)</span> 75% fully correct.</p></li>
+<li><p><strong>4</strong> = All problems complete with 50–75% correct;
+<strong>OR</strong> almost all problems complete with <span class="math inline">\(\ge\)</span> 75% correct.</p></li>
+<li><p><strong>3</strong> = Almost all problems complete with &lt; 75%
 correct.</p></li>
-<li><p><strong>2</strong> = More than half but fewer than all problems
-complete with <span class="math inline">\(\ge\)</span> 75%
-correct.</p></li>
-<li><p><strong>1</strong> = More than half but fewer than all problems
-complete with &lt; 75% correct; <strong>OR</strong> fewer than half
-complete.</p></li>
-<li><p><strong>0</strong> = No work submitted; <strong>OR</strong> fewer
-than half of problems complete.</p>
+<li><p><strong>2</strong> = More than half but not (almost) all complete
+with <span class="math inline">\(\ge\)</span> 75% correct.</p></li>
+<li><p><strong>1</strong> = More than half but not (almost) all complete
+with &lt; 75% correct; <strong>OR</strong> fewer than half both complete
+and correct.</p></li>
+<li><p><strong>0</strong> = No work submitted; <strong>OR</strong> or
+the work is mostly incomplete and/or incorrect.</p>
 <p>
 </p></li>
 </ul></li>
