--- a/Slides/RStudioOverview.html
+++ b/Slides/RStudioOverview.html
@@ -31,7 +31,7 @@
       // Author information
       presenters: [
             {
-        name:  'Author: Jill E. Thomley | Appalachian State University' ,
+        name:  'Jill E. Thomley | Appalachian State University' ,
         company: '',
         gplus: '',
         twitter: '',
@@ -3157,7 +3157,7 @@ line-height: 1.9;
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">January 12, 2026 @ 02:59 PM</p>
+            <p style="margin-top: 6px; margin-left: -2px;">January 26, 2026 @ 11:44 AM</p>
           </hgroup>
   </slide>
 
