Add waffle plots

--- a/Slides/EDACategoricalTables.html
+++ b/Slides/EDACategoricalTables.html
@@ -3272,14 +3272,13 @@ line-height: 1.9;
 <li>contingency table</li>
 <li><a href='https://ggplot2.tidyverse.org/reference/geom_bar.html' title=''>bar chart / barplot</a></li>
 <li>mosaic plot</li>
+<li>waffle plot</li>
 <li><del>pie chart</del></li>
 </ul>
 
-<p>Statisticians rarely use pie charts, but they are popular in media.</p>
+<p>Statisticians rarely use pie charts, but they are popular in media. &ldquo;There is no data that can be displayed in a pie chart that cannot be displayed better in some other type of chart.&rdquo;</p>
 
-<p>&ldquo;There is no data that can be displayed in a pie chart that cannot be displayed better in some other type of chart.&rdquo;</p>
-
-<p>(<em>Some people attribute this quote to John Tukey. While it cannot be verified, it is generally a true statement.</em>)</p>
+<p>(<em>Quote attributed to John Tukey. It is unverified, but generally true.</em>)</p>
 
 </article></slide><slide class=""><hgroup><h2>Frequency Table</h2></hgroup><article  id="frequency-table">
 
