Add summary measures slides

--- a/Slides/EDACategoricalPlots.html
+++ b/Slides/EDACategoricalPlots.html
@@ -3221,7 +3221,7 @@ line-height: 1.9;
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">January 26, 2026 @ 02:48 PM</p>
+            <p style="margin-top: 6px; margin-left: -2px;">January 28, 2026 @ 07:51 PM</p>
           </hgroup>
   </slide>
 
@@ -3232,11 +3232,10 @@ line-height: 1.9;
 <p><strong>Related Materials</strong></p>
 
 <ul>
-<li>Ch 2 of <em>Mathematical Statistics with Resampling and R, 2<sup>nd</sup> Ed.</em></li>
 <li>Ch 2 of <a href='https://moderndive.com/v2/viz.html' title=''><em>Modern Dive</em></a></li>
 <li>Ch 3 of <a href='https://moderndive.com/v2/wrangling.html' title=''><em>Modern Dive</em></a></li>
-<li>DataCamp <a href='https://www.datacamp.com/courses/introduction-to-the-tidyverse' title=''>Introduction to the Tidyverse</a></li>
-<li><a href='https://r-resources.massey.ac.nz/rgcookbook/' title=''>R Graphics Cookbook, 2nd Edition (2022)</a></li>
+<li>DataCamp <a href='https://www.datacamp.com/courses/introduction-to-the-tidyverse' title=''><em>Introduction to the Tidyverse</em></a></li>
+<li><a href='https://r-resources.massey.ac.nz/rgcookbook/' title=''><em>R Graphics Cookbook, 2nd Edition</em></a></li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section">
