--- a/Slides/EDACategoricalTables.html
+++ b/Slides/EDACategoricalTables.html
@@ -3231,10 +3231,9 @@ line-height: 1.9;
 <p><strong>Related Materials</strong></p>
 
 <ul>
-<li>Ch 2 of <em>Mathematical Statistics with Resampling and R, 2<sup>nd</sup> Ed.</em></li>
 <li>Ch 2 of <a href='https://moderndive.com/v2/viz.html' title=''><em>Modern Dive</em></a></li>
 <li>Ch 3 of <a href='https://moderndive.com/v2/wrangling.html' title=''><em>Modern Dive</em></a></li>
-<li>DataCamp <a href='https://www.datacamp.com/courses/introduction-to-the-tidyverse' title=''>Introduction to the Tidyverse</a></li>
+<li>DataCamp <a href='https://www.datacamp.com/courses/introduction-to-the-tidyverse' title=''><em>Introduction to the Tidyverse</em></a></li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section">
